--- a/workflow/snakefiles/envs/graphenv.yml
+++ b/workflow/snakefiles/envs/graphenv.yml
@@ -1,5 +1,6 @@
 name: graphenv
 channels:
+  - bioconda
   - conda-forge
   - defaults
 dependencies:
@@ -7,8 +8,8 @@ dependencies:
   - biopython=1.78=py39h7f8727e_0
   - blas=1.0=openblas
   - brotlipy=0.7.0=py39h27cfd23_1003
-  - ca-certificates=2021.7.5=h06a4308_1
-  - certifi=2021.5.30=py39h06a4308_0
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py39h06a4308_0
   - cffi=1.14.4=py39h261ae71_0
   - chardet=4.0.0=py39h06a4308_1003
   - cryptography=3.3.1=py39h3c74f83_0
@@ -49,6 +50,7 @@ dependencies:
   - numpy=1.19.2=py39h87658db_0
   - numpy-base=1.19.2=py39h0f7b65f_0
   - olefile=0.46=py_0
+  - openblas=0.3.4=h9ac9557_1000
   - openssl=1.1.1l=h7f8727e_0
   - pandas=1.1.5=py39ha9443f7_0
   - pcre=8.44=he6710b0_0
@@ -67,6 +69,7 @@ dependencies:
   - readline=8.0=h7b6447c_0
   - requests=2.25.1=pyhd3eb1b0_0
   - scipy=1.6.2=py39hf56f3a7_1
+  - seqkit=2.1.0=h9ee0642_0 
   - setuptools=51.0.0=py39h06a4308_2
   - sip=4.19.13=py39h2531618_0
   - six=1.15.0=py39h06a4308_0
@@ -96,4 +99,3 @@ dependencies:
     - taxadb==0.12.0
     - tqdm==4.62.3
 prefix: /home/tholstei/.conda/envs/graphenv
-
