--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@ resources/*
 
 .snakemake/*
 
-scripts/belief_propagation_old.py
+workflow/scripts/belief_propagation_old.py
+workflow/scripts/CreatePepGMGraph_customJson.py
+workflow/scripts/BarPlotResults_customTaxa.py
+workflow/scripts/belief_propagation_log.py
+
+workflow/Sars_strains.snakefile
