--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -27,7 +27,7 @@ rule CreateFactorGraph:
           firstTarget = firstTarget,
           sourceDB = sourceDB
      log: ResultsDir +'{samplename}/{hostname}_{DBname}.log'
-     shell: 'python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {params.targetTaxa} --PSM_Report {input} --PeptideMapPath '+ResultsDir+'{params.samplename}/{params.firstTarget}.json --out {output} &>> {log}'
+     shell: 'conda info -e  && python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {params.targetTaxa} --PSM_Report {input} --PeptideMapPath '+ResultsDir+'{params.samplename}/{params.firstTarget}.json --out {output} &>> {log}'
 
 rule RunPepGM:
      input: ResultsDir +'{samplename}/{hostname}_{DBname}_PepGM_graph.graphml'
@@ -56,8 +56,9 @@ rule FindBestParameters:
      output: ResultsDir +'{samplename}/paramcheck.png'
      conda: 'envs/graphenv.yml'
      log : ResultsDir + '{samplename}/paramcheck.log'
-     params: Results = ResultsDir+SampleName
-     shell: 'python3 workflow/scripts/GridSearchAnalysis.py --resultsfolder {params.Results} --out {output} &>> {log}'
+     params: Results = ResultsDir+SampleName,
+             host = ScientificHostName
+     shell: 'python3 workflow/scripts/GridSearchAnalysis.py --host {params.host} --resultsfolder {params.Results} --out {output} &>> {log}'
 
 #rules only needed for debugging/checking results
 rule CountProteinsInJson:
