--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ results/*
 !results/.gitkeep
 
 resources/*
-!resources/.gitkeep
 !resources/protacc2taxids_virus.txt
+!resources/Databases/.gitkeep
+!resources/SampleData/.gitkeep
 
 .snakemake/*
 
@@ -15,3 +16,6 @@ workflow/scripts/belief_propagation_log.py
 workflow/Sars_strains.snakefile
 
 graphenv.yml
+
+.snakemake/
+.vscode/
