--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -3,6 +3,7 @@
 WorkflowPath = os.path.dirname(os.path.realpath(workflow.snakefile))
 include: WorkflowPath +'/snakefiles/config.snakefile'
 include : WorkflowPath + '/snakefiles/searchgui+pepshaker.snakefile'
+include : WorkflowPath + '/snakefiles/buildDatabase.snakefile'
 #include: WorkflowPath + '/snakefiles/pepGM.snakefile'
 
 
@@ -16,34 +17,16 @@ rule all:
           #DataDirectory + SampleName + '/' + firstTarget +'_proteinCount.png'
 
 
-# these rules are very basic
-# one should consider adding /resources to some config file
-# but so far I did not find the correct file to do so
-rule splitToAccessions:
-     input:  'resources/protacc2taxids_virus.txt'
-     output: 'resources/accessions.txt'
-     shell: "awk '{{print $1}}' 'resources/protacc2taxids_virus.txt' > 'resources/accessions.txt'"
-
-
-rule splitToTaxids:
-     input: 'resources/protacc2taxids_virus.txt'
-     output: 'resources/taxids.txt'
-     shell: "awk '{{print $2}}' 'resources/protacc2taxids_virus.txt' > 'resources/taxids.txt'"
-
-
-rule hashDatabase:
-     input: 'resources/accessions.txt'
-     output: 'resources/accessions_hashed.npy'
-     shell: "python3 workflow/scripts/hashDatabase.py --input_path {input} --output_path {output}"
-
-
 rule getTargets:
-     input: 'resources/chicken_refseq_Default_PSM_Report.txt'
-     output: 'results/chicken_refseq_mapped_taxids.txt'
+     input:
+          'resources/chicken_refseq_Default_PSM_Report.txt',
+          'resources/accessions_hashed.npy',
+          'resources/taxids.txt'
      params:
-          query = 'results/chicken_refseq_query_accessions.txt',
-          hashed_database = 'resources/accessions_hashed.npy'
-     shell: "python3 workflow/scripts/getTargets.py -rq {input} -q {params.query} -d {params.hashed_database} -t {output}"
+          query= 'results/chicken_refseq_query_accessions.txt'
+     output:
+          'results/chicken_refseq_mapped_taxids.txt'
+     shell: "python3 workflow/scripts/getTargets.py -rq {input[0]} -q {params.query} -d {input[1]} -t {input[2]} -r {output} "
 
 
 rule CreateFactorGraph:
