--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,9 +19,9 @@ psmFDR: '5'
 #sample specific parameters
 
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
-SampleName: 'Sars-CoV-2_WT_sim'  #needs to be the name of your spectrum file and the folder where you have that file
-HostName: 'human'
-ReferenceDBName: 'refseqViral+SarsCoV2strains'
+SampleName: 'PXD002936_avian_bronchitis'  #needs to be the name of your spectrum file and the folder where you have that file
+HostName: 'chicken'
+ReferenceDBName: 'refseq'
 ScientificHostName: '"homo sapiens"'
 
 
