--- a/workflow/snakefiles/envs/graphenv.yml
+++ b/workflow/snakefiles/envs/graphenv.yml
@@ -1,8 +1,8 @@
-name: graphenv
+name: pepgm
 channels:
   - bioconda
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - biopython=1.78=py39h7f8727e_0
@@ -69,7 +69,7 @@ dependencies:
   - readline=8.0=h7b6447c_0
   - requests=2.25.1=pyhd3eb1b0_0
   - scipy=1.6.2=py39hf56f3a7_1
-  - seqkit=2.1.0=h9ee0642_0 
+  - seqkit=2.1.0=h9ee0642_0
   - setuptools=51.0.0=py39h06a4308_2
   - sip=4.19.13=py39h2531618_0
   - six=1.15.0=py39h06a4308_0
@@ -94,8 +94,37 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
+    - appdirs==1.4.4
     - argparse==1.4.0
+    - attrs==21.4.0
+    - configargparse==1.5.3
+    - connection-pool==0.0.3
+    - datrie==0.8.2
+    - docutils==0.18.1
+    - filelock==3.6.0
+    - gitdb==4.0.9
+    - gitpython==3.1.27
+    - ipython-genutils==0.2.0
+    - jsonschema==4.4.0
+    - jupyter-core==4.9.2
+    - llvmlite==0.38.0
+    - mmh3==3.0.0
+    - nbformat==5.1.3
+    - numba==0.55.1
     - peewee==3.14.4
+    - psutil==5.9.0
+    - pulp==2.6.0
+    - pyrsistent==0.18.1
+    - pyyaml==6.0
+    - ratelimiter==1.2.0.post0
+    - smart-open==5.2.1
+    - smmap==5.0.0
+    - snakemake==6.15.5
+    - stopit==1.1.2
+    - tabulate==0.8.9
     - taxadb==0.12.0
+    - toposort==1.7
     - tqdm==4.62.3
-prefix: /home/tholstei/.conda/envs/graphenv
+    - traitlets==5.1.1
+    - wrapt==1.13.3
+prefix: /home/fkistner/mambaforge/envs/pepgm
