--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -43,9 +43,10 @@ rule CreateFactorGraph:
           hostname = HostName,
           DBname = ReferenceDBName,
           targetTaxa = TargetTaxa,
-          sourceDB = sourceDB
+          sourceDB = sourceDB,
+          ResultsDir = ResultsDir
      log: ResultsDir +'{samplename}/{hostname}_{DBname}.log'
-     shell: 'conda info -e  && python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {input[1]}  --PSM_Report {input[0]} --PeptideMapPath '+ResultsDir+'{params.samplename}/Mapped_Taxa_Proteins.json --out {output} &>> {log}'
+     shell: 'cp config/config.yaml {params.ResultsDir}/{wildcards.samplename}/  && python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {input[1]}  --PSM_Report {input[0]} --PeptideMapPath '+ResultsDir+'{params.samplename}/Mapped_Taxa_Proteins.json --out {output} &>> {log}'
 
 
 rule RunPepGM:
