--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ results/*
 !results/.gitkeep
 
 resources/*
-!resources/taxidMapping/protacc2taxids_virus.txt
+resources/taxidMapping/protacc2taxids_virus.txt
 !resources/.gitkeep
 !resources/Databases/.gitkeep
 !resources/SampleData/.gitkeep
