--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,4 @@
 #paths to directories
-
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Databases/'
 ResultsDir: 'results/'
@@ -11,31 +10,28 @@ PeptideShakerDir : '/home/tholstei/repos/PepGM_all/bin/PeptideShaker-2.1.1/'
 SearchGUIDir: '/home/tholstei/repos/PepGM_all/bin/SearchGUI-4.1.1-mac_and_linux/SearchGUI-4.1.1/'
 
 
+#Name of folder for the PepGM run in the results folder
+ExperimentName: 'Cowpox_BR_hostfilter'
+
 #parameters for SearchGUI Search
 searchengines: '-xtandem'
 peptideFDR: '5'
 proteinFDR: '5'
 psmFDR: '5'
 
-#Name of folder for the PepGM run in the results folder
-ExperimentName: 'H1N1_Jans_data'
-
-
-
 #sample specific parameters
+
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
-SampleName: 'H1N1'  #needs to be the name of your spectrum file and the folder where you have that file
-HostName: 'dog'
-ReferenceDBName: 'refseqViral'  #name of your fasta file. available here: VirusProteinHumanhost, refseqViral, refseq
-ScientificHostName: '"canis lupus familiaris"'
-FilterSpectra: True        #option to filter out the host spectra and crap
+SampleName: 'PXD014913_cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
+HostName: 'human'
+ReferenceDBName: 'refseqViral'
+ScientificHostName: "'homo sapiens'"
+FilterSpectra: True       #option to filter out the host spectra and crap
 AddHostandCrapToDB: False   #option to add host and crap to the search db. must be False if previous option is True.s  
 
 #PepGM parameters
 TaxaInPlot: 15       #how many taxa should appear in the final results barplot
 TaxaInProteinCount: 15 #how many taxa should appear in the protein counting barplot
-TargetTaxa: '"hendraviridae" "homo sapiens"'
-FirstTarget: 'hendraviridae'
 sourceDB: 'all[FILT]' #choose from entrez query DBs to filter the protein DB with 
 #swissprot[filter]' = only swissprot proteins, refseq[filter] = know refseq proteins, all[filter]', etc: https://www.ncbi.nlm.nih.gov/books/NBK49540/
 
