--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -41,7 +41,7 @@ rule CreateFactorGraph:
           samplename = SampleName,
           hostname = HostName,
           DBname = ReferenceDBName,
-          targetTaxa = TargetTaxa,
+          #targetTaxa = TargetTaxa,
           sourceDB = sourceDB,
           ResultsDir = ResultsDir
      log: ResultsDir +SampleName+'/{DBname}.log'
@@ -56,8 +56,8 @@ rule RunPepGM:
           samplename = SampleName,
           hostname = HostName,
           DBname = ReferenceDBName,
-          targetTaxa = TargetTaxa,
-          firstTarget = firstTarget
+          #targetTaxa = TargetTaxa,
+          #firstTarget = firstTarget
      log : ResultsDir + SampleName+'/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}_pepGM.log'
      shell: 'python3  workflow/scripts/PepGM.py --GraphMLPath {input} --prior {wildcards.Prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output} &>> {log}'
 
