--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,7 +22,7 @@ psmFDR: '5'
 #sample specific parameters
 
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
-SampleName: 'PXD014913_cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
+SampleName: 'PXD003013_Cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
 HostName: 'human'
 ReferenceDBName: 'refseqViral'
 ScientificHostName: "'homo sapiens'"
