--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -5,8 +5,6 @@ include: WorkflowPath +'/snakefiles/config.snakefile'
 include : WorkflowPath + '/snakefiles/searchgui+pepshaker.snakefile'
 include : WorkflowPath + '/snakefiles/buildDatabase.snakefile'
 include : WorkflowPath + '/snakefiles/filterHostCrap.snakefile'
-#include: WorkflowPath + '/snakefiles/pepGM.snakefile'
-
 
 
 rule all:
@@ -41,11 +39,10 @@ rule CreateFactorGraph:
           samplename = SampleName,
           hostname = HostName,
           DBname = ReferenceDBName,
-          #targetTaxa = TargetTaxa,
           sourceDB = sourceDB,
           ResultsDir = ResultsDir
      log: ResultsDir +SampleName+'/{DBname}.log'
-     shell: 'cp config/config.yaml {params.ResultsDir}/{params.samplename}/  && python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {input[1]}  --PSM_Report {input[0]} --PeptideMapPath '+ResultsDir+'{params.samplename}/Mapped_Taxa_Proteins.json --out {output} &>> {log}'
+     shell: 'python3 workflow/scripts/CreatePepGMGraph.py --sourceDB {params.sourceDB} --targetTaxa {input[1]}  --PSM_Report {input[0]} --PeptideMapPath '+ResultsDir+'{params.samplename}/Mapped_Taxa_Proteins.json --out {output} &>> {log}'
 
 
 rule RunPepGM:
@@ -56,8 +53,6 @@ rule RunPepGM:
           samplename = SampleName,
           hostname = HostName,
           DBname = ReferenceDBName,
-          #targetTaxa = TargetTaxa,
-          #firstTarget = firstTarget
      log : ResultsDir + SampleName+'/Prior{Prior}/log/{DBname}_a{alpha}_b{beta}_pepGM.log'
      shell: 'python3  workflow/scripts/PepGM.py --GraphMLPath {input} --prior {wildcards.Prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output} &>> {log}'
 
