--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,5 @@
 #paths to directories
+
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Databases/'
 ResultsDir: 'results/'
@@ -9,9 +10,8 @@ TaxidMapping: 'taxidMapping/'
 PeptideShakerDir : '/home/tholstei/repos/PepGM_all/bin/PeptideShaker-2.1.1/'
 SearchGUIDir: '/home/tholstei/repos/PepGM_all/bin/SearchGUI-4.1.1-mac_and_linux/SearchGUI-4.1.1/'
 
-
 #Name of folder for the PepGM run in the results folder
-ExperimentName: 'Cowpox_BR_hostfilter'
+ExperimentName: 'Cowpox_nohostfilter'
 
 #parameters for SearchGUI Search
 searchengines: '-xtandem'
@@ -22,12 +22,13 @@ psmFDR: '5'
 #sample specific parameters
 
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
-SampleName: 'PXD003013_Cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
+SampleName: 'PXD014913_cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
 HostName: 'human'
 ReferenceDBName: 'refseqViral'
-ScientificHostName: "'homo sapiens'"
-FilterSpectra: True       #option to filter out the host spectra and crap
-AddHostandCrapToDB: False   #option to add host and crap to the search db. must be False if previous option is True.s  
+ScientificHostName: '"homo sapiens"'
+FilterSpectra: False
+AddHostandCrapToDB: True
+
 
 #PepGM parameters
 TaxaInPlot: 15       #how many taxa should appear in the final results barplot
