--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ workflow/scripts/belief_propagation_old.py
 workflow/scripts/CreatePepGMGraph_customJson.py
 workflow/scripts/BarPlotResults_customTaxa.py
 workflow/scripts/PrettyPlots.py
+workflow/scripts/Peptidome_comparison.py
 workflow/scripts/belief_propagation_log.py
 workflow/scripts/__pycache__/*
 
