--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,7 +11,7 @@ SearchGUIDir: '/home/tholstei/repos/PepGM_all/bin/SearchGUI-4.1.1-mac_and_linux/
 
 
 #Name of folder for the PepGM run in the results folder
-ExperimentName: 'Sars_CoV_2_withhostfilter'
+ExperimentName: 'Xtandem_rescore_test'
 
 #parameters for SearchGUI Search
 searchengines: '-xtandem'
@@ -19,15 +19,47 @@ peptideFDR: '5'
 proteinFDR: '5'
 psmFDR: '5'
 
-#sample specific parameters
+FilterSpectra: False
+AddHostandCrapToDB: True
 
+#xtandem parameters
+search_engine : "xtandem"
+xtandem_mods_variable : "16@M"
+xtandem_pmmep : 10
+xtandem_pmmem : 10
+xtandem_default: "/home/tholstei/repos/PepGM_all/PepGM/resources/XTandem/xtandem_default.xml" # X!Tandem default configuration file
+xtandem_fmme: 0.4 #Fragment mass tolerance (default=0.4)
+xtandem_fmmeu: 'DA' #Fragment mass tolerance unit (default="DA")
+xtandem_pmmep: 100 #Precursor mass tolerance plus (default=100)
+xtandem_pmmem: 100 # Precursor mass tolerance minus (default=100)
+xtandem_pmmeu: 'ppm' #Precursor mass tolerance unit (default="ppm")
+xtandem_mods_fixed: '57@C' #Fixed modifications, comma separated (default="57@C")
+xtandem_mods_variable: '' # Variable modifications, e.g. "16@M", comma separated (default=None)
+xtandem_mods_variable_nterm: '' #Variable N-terminal modifications, e.g."+42.0@[", comma separated (default=None)
+xtandem_add_params: {} #Additional parameters for X!Tandem as json dictionary{"param1" : "value", "param2" : "value", ...} which will be added to thextandem_input.xml
+
+#ms2rescore parameters
+RescorePipeline: '"tandem"' # any of ['infer', 'pin', 'tandem', 'maxquant', 'msgfplus', 'peptideshaker']
+RescoreFeatures: '[["searchengine", "ms2pip", "rt"]]' #[["searchengine", "ms2pip", "rt"]],
+RunPercolator: 'true' #boolean
+FragModel: '"HCD"' #fragmentation model used for ms2pip http://compomics.github.io/projects/ms2pip_c#specialized-prediction-models
+Mods: 
+      [["Acetyl", 1, 42.010565,'null','true','false'],
+       ["Deamidated", 7, 0.984016, '"Q"', 'false', 'false'],
+       ["Gln->pyro-Glu",28,-17.026549, '"Q"', 'true', 'false'],
+       ["Glu->pyro-Glu", 27, -18.010565, '"E"', 'true',  'false'],
+       ["Carbamidomethyl", 4,57.021464,'"C"', 'false', 'false'],
+       ["Gln->pyro-Glu", 28, -17.026549, '"Q"','true','false'],
+       ["Ammonia-loss", 385, -17.026549, '"C"', 'true','false']] #needs to be a lists of lists with name, unimod accession, mass shift, amino acid, n term (bool), c term (bool)
+
+
+#sample specific parameters
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
 SampleName: 'PXD018594_Sars_CoV_2'  #needs to be the name of your spectrum file and the folder where you have that file
-HostName: 'chlorocebus'             #name of your host fasta file
 ReferenceDBName: 'refseqViral'
-ScientificHostName: "'chlorocebus'"
-FilterSpectra: True      #option to filter out the host spectra and crap
-AddHostandCrapToDB: False   #option to add host and crap to the search db. must be False if previous option is True.s  
+HostName: 'chlorocebus'
+ScientificHostName: 'chlorocebus'
+
 
 #PepGM parameters
 TaxaInPlot: 15       #how many taxa should appear in the final results barplot
