--- a/workflow/envs/graphenv.yml
+++ b/workflow/envs/graphenv.yml
@@ -1,16 +1,15 @@
-name: graphenv
+name: pepgm
 channels:
-  - bioconda
-  - conda-forge
   - defaults
+  - conda-forge
+  - bioconda
 dependencies:
   - _libgcc_mutex=0.1=main
   - biopython=1.78=py39h7f8727e_0
   - blas=1.0=openblas
   - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.4.26=h06a4308_0
-  - certifi=2022.5.18.1=py39h06a4308_0
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py39h06a4308_0
   - cffi=1.14.4=py39h261ae71_0
   - chardet=4.0.0=py39h06a4308_1003
   - cryptography=3.3.1=py39h3c74f83_0
@@ -48,12 +47,13 @@ dependencies:
   - matplotlib-base=3.3.2=py39hd261b2b_0
   - ncurses=6.2=he6710b0_1
   - networkx=2.5=py_0
+  - numpy=1.19.2=py39h87658db_0
+  - numpy-base=1.19.2=py39h0f7b65f_0
   - olefile=0.46=py_0
   - openblas=0.3.4=h9ac9557_1000
-  - openssl=1.1.1o=h7f8727e_0
+  - openssl=1.1.1l=h7f8727e_0
   - pandas=1.1.5=py39ha9443f7_0
   - pcre=8.44=he6710b0_0
-  - percolator=3.5=hfd1433f_1
   - pillow=8.0.1=py39he98fc37_0
   - pip=20.3.3=py39h06a4308_0
   - pycparser=2.20=py_2
@@ -69,7 +69,6 @@ dependencies:
   - readline=8.0=h7b6447c_0
   - requests=2.25.1=pyhd3eb1b0_0
   - scipy=1.6.2=py39hf56f3a7_1
-  - seaborn=0.11.2=pyhd3eb1b0_0
   - seqkit=2.1.0=h9ee0642_0
   - setuptools=51.0.0=py39h06a4308_2
   - sip=4.19.13=py39h2531618_0
@@ -80,7 +79,6 @@ dependencies:
   - tzdata=2020d=h14c3975_0
   - urllib3=1.26.2=pyhd3eb1b0_0
   - wheel=0.36.2=pyhd3eb1b0_0
-  - xerces-c=3.2.3=h780794e_0
   - xorg-kbproto=1.0.7=h14c3975_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.2=h470a237_5
@@ -92,76 +90,42 @@ dependencies:
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h27cfd23_1007
-  - xsd=4.0.0_dep=h21b814f_3
   - xtandem=15.12.15.2=h6cbcbf9_3
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
-    - absl-py==1.1.0
+    - appdirs==1.4.4
     - argparse==1.4.0
-    - astunparse==1.6.3
     - attrs==21.4.0
-    - cachetools==5.2.0
-    - cascade-config==0.3.0
-    - click==7.1.2
-    - deeplc==1.1.2
-    - flatbuffers==1.12
-    - future==0.18.2
-    - gast==0.4.0
-    - google-auth==2.8.0
-    - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - greenlet==1.1.2
-    - grpcio==1.46.3
-    - h5py==3.7.0
-    - importlib-metadata==4.11.4
-    - joblib==1.1.0
-    - jsonschema==3.2.0
-    - keras==2.9.0
-    - keras-preprocessing==1.1.2
-    - libclang==14.0.1
-    - llvmlite==0.38.1
-    - markdown==3.3.7
-    - ms2pip==3.9.0
-    - ms2rescore==2.1.2
-    - numba==0.55.2
-    - numexpr==2.8.1
-    - numpy==1.22.4
-    - oauthlib==3.2.0
-    - opt-einsum==3.3.0
-    - packaging==21.3
-    - patsy==0.5.2
+    - configargparse==1.5.3
+    - connection-pool==0.0.3
+    - datrie==0.8.2
+    - docutils==0.18.1
+    - filelock==3.5.1
+    - gitdb==4.0.9
+    - gitpython==3.1.26
+    - ipython-genutils==0.2.0
+    - jsonschema==4.4.0
+    - jupyter-core==4.9.2
+    - llvmlite==0.38.0
+    - mmh3==3.0.0
+    - nbformat==5.1.3
+    - numba==0.55.1
     - peewee==3.14.4
-    - progressbar2==4.0.0
-    - protobuf==3.19.4
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pygam==0.8.0
+    - psutil==5.9.0
+    - pulp==2.6.0
     - pyrsistent==0.18.1
-    - pyteomics==4.5.3
-    - python-utils==3.3.3
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - scikit-learn==1.1.1
-    - spectrum-utils==0.3.5
-    - sqlalchemy==1.4.37
-    - statsmodels==0.13.2
-    - tables==3.7.0
+    - pyyaml==6.0
+    - ratelimiter==1.2.0.post0
+    - smart-open==5.2.1
+    - smmap==5.0.0
+    - snakemake==6.15.5
+    - stopit==1.1.2
+    - tabulate==0.8.9
     - taxadb==0.12.0
-    - tensorboard==2.9.1
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - tensorflow==2.9.1
-    - tensorflow-estimator==2.9.0
-    - tensorflow-io-gcs-filesystem==0.26.0
-    - termcolor==1.1.0
-    - threadpoolctl==3.1.0
-    - tomlkit==0.11.0
+    - toposort==1.7
     - tqdm==4.62.3
-    - typing-extensions==4.2.0
-    - werkzeug==2.1.2
-    - wrapt==1.14.1
-    - xgboost==1.6.1
-    - zipp==3.8.0
-prefix: /home/tholstei/.conda/envs/graphenv
+    - traitlets==5.1.1
+    - wrapt==1.13.3
+prefix: /home/fkistner/mambaforge/envs/pepgm
