still figuring out gitignore

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,36 +4,38 @@ DatabaseDir: 'resources/Databases/'
 ResultsDir: 'results/'
 ResourcesDir: 'resources/'
 TaxidMapping: 'taxidMapping/'
-SamplePath: '/home/fkistner/pepgm/resources/SampleData/PXD018594_Sars_CoV_2/PXD018594_Sars_CoV_2.mgf'
-ParametersFile: '/home/fkistner/pepgm/PepGM/resources/SampleData/PXD018594_Sars_CoV_2/PXD018594_Sars_CoV_2.par'
+SamplePath: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD014913_cowpox_BR/PXD014913_cowpox_BR.mgf'
+ParametersFile: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD014913_cowpox_BR/PXD014913_cowpox_BR.par'
 
 #PeptideShaker and SearchGUI directories
-PeptideShakerDir : '/home/fkistner/pepgm/bin/PeptideShaker-2.2.9/'
-SearchGUIDir: '/home/fkistner/pepgm/PepGM_all/bin/SearchGUI-4.1.14/'
+#PeptideShaker and SearchGUI directories
+PeptideShakerDir : '/home/tholstei/repos/PepGM_all/bin/PeptideShaker-2.2.9/'
+SearchGUIDir: '/home/tholstei/repos/PepGM_all/bin/SearchGUI-4.1.14/'
 
 
 #Name of folder for the PepGM run in the results folder
-ExperimentName: 'Sars_CoV_2_withhostfilter'
+ExperimentName: 'Cowpox_cowpox_removed'
 
 #parameters for SearchGUI Search
 searchengines: '-xtandem'
 peptideFDR: '5'
-proteinFDR: '100'
+proteinFDR: '5'
 psmFDR: '5'
 
 #sample specific parameters
 
-SampleName: 'PXD018594_Sars_CoV_2'  #needs to be the name of your spectrum file and the folder where you have that file
-HostName: 'chlorocebus'             #name of your host fasta file
-ReferenceDBName: 'refseqViral'
-ScientificHostName: "'chlorocebus'"
-FilterSpectra: True      #option to filter out the host spectra and crap
-AddHostandCrapToDB: False   #option to add host and crap to the search db. must be False if previous option is True.s  
+SpectraFileType: '.mgf' #'.mgf' or '.mzML'
+SampleName: 'PXD014913_cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
+HostName: 'human'
+ReferenceDBName: 'refseqViralwocpxv'
+ScientificHostName: "'homo sapiens'"
+FilterSpectra: False       #option to filter out the host spectra and crap
+AddHostandCrapToDB: True   #option to add host and crap to the search db. must be False if previous option is True.s  
 
 #PepGM parameters
 TaxaInPlot: 15       #how many taxa should appear in the final results barplot
 TaxaInProteinCount: 15 #how many taxa should appear in the protein counting barplot
-sourceDB: 'all[FILT]' #choose from entrez query DBs to filter the protein DB with
+sourceDB: 'all[FILT]' #choose from entrez query DBs to filter the protein DB with 
 #swissprot[filter]' = only swissprot proteins, refseq[filter] = know refseq proteins, all[filter]', etc: https://www.ncbi.nlm.nih.gov/books/NBK49540/
 
 Alpha: [0.01,0.05,0.1,0.2,0.4,0.6] #increments of parameter alpha to use for the grid earch
