--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,12 @@ workflow/Sars_strains.snakefile
 .snakemake/
 .vscode/
 
+.idea
 ./config/*
+.idea/deployment.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/modules.xml
+*.iml
+*.xml
