Update and rename config.yaml to config_example.yaml

--- a/config/config_example.yaml
+++ b/config/config_example.yaml
@@ -1,7 +1,7 @@
 #Entrez API data
 
-APIkey: 'cbd119d8a7d988bc27f5b0a722a7c861f408'
-APImail: 'tanja.holstein@bam.de'
+APIkey: ''
+APImail: ''
 
 
 #paths to directories
