--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,21 +5,24 @@ APImail: 'tanja.holstein@bam.de'
 
 
 #paths to directories
+
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Databases/'
 ResultsDir: 'results/'
 ResourcesDir: 'resources/'
 TaxidMapping: 'taxidMapping/'
-SamplePath: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD014913_cowpox_BR/PXD014913_cowpox_BR.mgf'
-ParametersFile: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD014913_cowpox_BR/PXD014913_cowpox_BR.par'
 
 #PeptideShaker and SearchGUI directories
 PeptideShakerDir : '/home/tholstei/repos/PepGM_all/bin/PeptideShaker-2.2.9/'
 SearchGUIDir: '/home/tholstei/repos/PepGM_all/bin/SearchGUI-4.1.14/'
 
+#sample specific stuff
+SamplePath: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD003013_Cowpox_BR/PXD003013_Cowpox_BR.mgf'
+ParametersFile: '/home/tholstei/repos/PepGM_all/PepGM/resources/SampleData/PXD003013_Cowpox_BR/PXD003013_Cowpox_BR.par'
+
 
 #Name of folder for the PepGM run in the results folder
-ExperimentName: 'Cowpox_cowpox_removed'
+ExperimentName: 'cowpox_zero_lookahead'
 
 #parameters for SearchGUI Search
 searchengines: '-xtandem'
@@ -30,11 +33,11 @@ psmFDR: '5'
 #sample specific parameters
 
 SpectraFileType: '.mgf' #'.mgf' or '.mzML'
-SampleName: 'PXD014913_cowpox_BR'  #needs to be the name of your spectrum file and the folder where you have that file
+SampleName: 'PXD003013_Cowpox'  #needs to be the name of your spectrum file and the folder where you have that file
 HostName: 'human'
-ReferenceDBName: 'refseqViralwocpxv'
+ReferenceDBName: 'refseqViral'
 ScientificHostName: "'homo sapiens'"
-FilterSpectra: False       #option to filter out the host spectra and crap
+FilterSpectra: False        #option to filter out the host spectra and crap
 AddHostandCrapToDB: True   #option to add host and crap to the search db. must be False if previous option is True.s  
 
 #PepGM parameters
